--- a/.github/workflows/build.yml
+++ b/.github/workflows/build.yml
@@ -6,10 +6,11 @@ jobs:
     steps:
       - name: Checkout
         uses: actions/checkout@v2
-      
+
       - name: Install cmake
         run: |
           mkdir build
+          cd build
           cmake -GNinja ..
         shell: bash
 
