--- a/.github/workflows/build.yml
+++ b/.github/workflows/build.yml
@@ -8,16 +8,29 @@ jobs:
         uses: actions/checkout@v2
       - uses: ilammy/setup-nasm@v1
       - uses: seanmiddleditch/gha-setup-ninja@master
+      - name: Install USD
+        run: |
+          git clone -b release https://github.com/PixarAnimationStudios/USD.git
+        shell: bash
+      - name: Install USD
+        run: |
+          python USD/build_scripts/build_usd.py ../USD-build
+        shell: bash
       - name: Install cmake
         run: |
           mkdir build
           cd build
           cmake -GNinja ..
         shell: bash
-
+      
       - name: ninja
         run: |
           ninja
+        shell: bash
+
+      - name: pillow
+        run: |
+          pip install Pillow
         shell: bash
 
       - uses: actions/upload-artifact@v2
