--- a/.github/workflows/build.yml
+++ b/.github/workflows/build.yml
@@ -11,7 +11,11 @@ jobs:
       - name: Install USD
         run: |
           git clone -b release https://github.com/PixarAnimationStudios/USD.git
-        shell: bash
+        shell: bash        
+      - name: Set up Python
+        uses: actions/setup-python@v1
+        with:
+          python-version: 3.4
       - name: Install USD
         run: |
           pip install PySide
